Fix margin on small screens for biography section

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -45,10 +45,6 @@
       margin-top: 45px;
       font-size: 14px;
 
-      @include lte-md-screen {
-        margin-top: 0px;
-      }
-
       .biography-image-col {
         padding-left: 0;
         padding-right: 0;
